fixed alignment of the ViewsAlert component

--- a/public/main.css
+++ b/public/main.css
@@ -28,7 +28,7 @@
 
 
 .propertyTypeTitle {
-  font-size: 8.5px;
+  font-size: 9px;
   font-weight: 600; 
 }
 
